--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      Optimus
+    </title>
+  </head>
+  <body>
+    Prime
+  </body>
+</html>
